[package]
name = "simple-db"
version = "0.1.0"
edition = "2021"
description = "A simple in-memory database implemented in Rust"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rustyline = "10.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"